# pushDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zj26/pushdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/: x264.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/zj26/pushdemo/: LivePusher.kt  MainActivity.kt
app/src/main/java/com/zj26/pushdemo/push/: AudioChannel.kt  CameraHelper.kt  VideoChannel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zj26/pushdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
